@@ -485,7 +485,7 @@ Offset}
         xywh {248 114 127 52} labelsize 11
       } {
         Fl_Pack {} {
-          label {To Sys Efx} open selected
+          label {To Sys Efx} open
           xywh {249 116 126 48} type HORIZONTAL labeltype NO_LABEL labelsize 11 align 0
           code0 {o->spacing(8);}
           code1 {//
@@ -954,7 +954,7 @@ else {propta->deactivate();proptb->deactivate();}}
         xywh {0 220 395 110} box ENGRAVED_FRAME
       } {
         Fl_Group {} {
-          label PADsynth
+          label PADsynth open
           xywh {205 245 100 80} box ENGRAVED_FRAME labelfont 1
         } {
           Fl_Button padeditbutton {
@@ -1000,7 +1000,7 @@ else {propta->deactivate();proptb->deactivate();}}
           }
         }
         Fl_Group {} {
-          label SUBsynth
+          label SUBsynth open
           xywh {105 245 100 80} box ENGRAVED_FRAME labelfont 1
         } {
           Fl_Check_Button subsynenabledcheck {
@@ -1162,49 +1162,56 @@ else {propta->deactivate();proptb->deactivate();}}
         end();
         // if (Runtime.ui.showinstrumentinfo!=0) instrumenteditwindow->show();} {}
   }
-  Function {showparameters(int kititem,int engine)} {} {
-    code {if (engine == -1)
-        {   // this is used if I want to clear the engine from the part
-            if (kititem == lastkititem)
-                kititem = -1;
-            else
-                kititem = lastkititem;
-        }
+  Function {showparameters(int kititem,int engine)} {open
+  } {
+    code {//
+    if (engine == -1)
+    {   // this is used if I want to clear the engine from the part
+        if (kititem == lastkititem)
+            kititem = -1;
+        else
+            kititem = lastkititem;
+    }
+    else if (part->Pname == "Simple Sound")
+    {
+        part->Pname = "No Title";
+        instrumentlabel->copy_label(part->Pname.c_str());
+    }
 
-        if (kititem != lastkititem)
-        {
-            if (adnoteui != NULL)
-                delete adnoteui;
-            if (subnoteui != NULL)
-                delete subnoteui;
-            if (padnoteui != NULL)
-                delete padnoteui;
-            adnoteui = NULL;
-            subnoteui = NULL;
-            padnoteui = NULL;
-            lastkititem = kititem;
+    if (kititem != lastkititem)
+    {
+        if (adnoteui != NULL)
+            delete adnoteui;
+        if (subnoteui != NULL)
+            delete subnoteui;
+        if (padnoteui != NULL)
+            delete padnoteui;
+        adnoteui = NULL;
+        subnoteui = NULL;
+        padnoteui = NULL;
+        lastkititem = kititem;
+        if (kititem >= NUM_KIT_ITEMS)
+            return; // bad kit item
+        if (kititem < 0)
+            return;
 
-            if (kititem >= NUM_KIT_ITEMS)
-                return; // bad kit item
-            if (kititem < 0)
-                return;
+        if (part->kit[kititem].adpars)
+            adnoteui = new ADnoteUI(part->kit[kititem].adpars);
 
-            if (part->kit[kititem].adpars)
-                adnoteui = new ADnoteUI(part->kit[kititem].adpars);
+        if (part->kit[kititem].subpars)
+            subnoteui = new SUBnoteUI(part->kit[kititem].subpars);
 
-            if (part->kit[kititem].subpars)
-                subnoteui = new SUBnoteUI(part->kit[kititem].subpars);
+        if (part->kit[kititem].padpars)
+            padnoteui = new PADnoteUI(part->kit[kititem].padpars);
+    }
 
-            if (part->kit[kititem].padpars)
-                padnoteui = new PADnoteUI(part->kit[kititem].padpars);
-        }
-
-        if (engine == 0 && adnoteui != NULL)
-            adnoteui->ADnoteGlobalParameters->show();
-        if (engine == 1 && subnoteui != NULL)
-            subnoteui->SUBparameters->show();
-        if (engine == 2 && adnoteui != NULL)
-            padnoteui->padnotewindow->show();} {}
+    if (engine == 0 && adnoteui != NULL)
+        adnoteui->ADnoteGlobalParameters->show();
+    if (engine == 1 && subnoteui != NULL)
+        subnoteui->SUBparameters->show();
+    if (engine == 2 && adnoteui != NULL)
+        padnoteui->padnotewindow->show();} {selected
+    }
   }
   Function {~PartUI()} {} {
     code {if (adnoteui)
